--- a/Luffy/test/fixtures/bus_dows.yml
+++ b/Luffy/test/fixtures/bus_dows.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  bus_id: B1
-  bus_nm: 37번
-  bus_dow: one
+  bus_dow_nm: 월
+  dow_id: 1
 
 two:
-  bus_id: B2
-  bus_nm: 31번
-  bus_dow: two
+  bus_dow_nm: 화
+  dow_id: 1
