버스 정류장 상세 API 구현

--- a/Luffy/test/fixtures/ads.yml
+++ b/Luffy/test/fixtures/ads.yml
@@ -2,16 +2,16 @@
 
 one:
   ad_cd_id: 1
-  ad_title: MyText
-  ad_start_dt: 2016-01-06
-  ad_end_dt: 2016-01-06
-  ad_det_id: MyString
-  bus_stop: 
+  ad_title: test1
+  ad_start_dt: 2016-01-1
+  ad_end_dt: 2016-01-10
+  ad_det_id: 1
+  bus_stop: one
 
 two:
-  ad_cd_id: 1
-  ad_title: MyText
-  ad_start_dt: 2016-01-06
-  ad_end_dt: 2016-01-06
-  ad_det_id: MyString
-  bus_stop: 
+  ad_cd_id: 2
+  ad_title: test2
+  ad_start_dt: 2016-01-5
+  ad_end_dt: 2016-01-15
+  ad_det_id: 1
+  bus_stop: two
